--- a/Grupo_Rac/Grupo_Rac.API/appsettings.json
+++ b/Grupo_Rac/Grupo_Rac.API/appsettings.json
@@ -1,4 +1,15 @@
 {
+  "ConnectionStrings": {
+    "GestionConn": "data source=GrupoRac.mssql.somee.com; initial catalog=GrupoRac; user id=PUSHKIN504_SQLLogin_1; password=ce75qhmbyr;"
+  },
+  "MailSettings": {
+    "Server": "smtp.gmail.com",
+    "Port": 465,
+    "SenderName": "Yordin",
+    "SenderEmail": "yordin32sanchez@gmail.com",
+    "UserName": "eduardo.jafet.varela.salinas@gmail.com",
+    "Password": "minely197983_"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
